Adiciona seção de avaliações

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         <p>Email: contato@cafegourmet.com</p>
         <p>Instagram: @cafegourmet</p>
     </section>
-
+    <section id="avaliacoes">
+        <h2>Avaliações</h2>
+        <ul>
+            <li>"Melhor café da cidade!" - Maria S.</li>
+            <li>"Atendimento excelente e café divino!" - João P.</li>
+        </ul>
+    </section>
     <footer>
         <p>&copy; 2025 Café Gourmet. Todos os direitos reservados.</p>
     </footer>
